# nexus

./: .gitignore  .gitmodules  CMakeLists.txt  Config.cmake.in  INSTALL.md  MERGE_NOTES.md  README.md  README.txt  test.cpp
.github/actions/build_and_deploy/: action.yml
.github/actions/upload/: action.yml
.github/workflows/: BuildNexus.yml  CreateRelease.yml  Linux.yml  MacOS.yml  Windows.yml
doc/: nxsbuild.md  nxsbuild.txt  nxscompress.md  nxsedit.md  nxsedit.txt  nxsview.md  nxsview.txt  roadmap.md  v4_roadmap.md
html/: LICENSE.txt  nxsloader.html  raycast.html  threejs.html  threejs.sync.html
html/js/: GPUPicker.js  NEXUSLoader.js  corto.em.js  corto.js  lil-gui.js  meco.js  nexus.js  nexus.monitor.js  nexus_three.js
html/js/controls/: OrbitControls.js  TrackballControls.js
html/models/: gargo.nxz
nexus3d/: README.md  package.json  rollup.config.js  webpack.config.js  webpacklib.config.js
nexus3d/src/: Binary.js  Cache.js  Mesh.js  Monitor.js  NXS.js  NXSRaw.js  Nexus3D.js  Traversal.js  index.js
src/: CMakeLists.txt
src/cmake/: tools.cmake
src/common/: cone.cpp  cone.h  config.h  controller.cpp  controller.h  dag.cpp  dag.h  frustum.cpp  frustum.h  globalgl.h  gltf.h  gpu_cache.h  json.hpp  material.cpp  material.h  metric.h  nexus.cpp  nexus.h  nexusdata.cpp  nexusdata.h  nexusfile.h  prioritizer.cpp  prioritizer.h  qcontroller.cpp  qcontroller.h  qtnexusfile.cpp  qtnexusfile.h  ram_cache.cpp  ram_cache.h  renderer.cpp  renderer.h  signature.h  simplejson.hpp  token.h  traversal.cpp  traversal.h  virtualarray.cpp  virtualarray.h
src/core/: adjacency.cpp  adjacency.h  basemesh.cpp  basemesh.h  clustering.cpp  clustering.h  clustering_metis.cpp  clustering_metis.h  hungarian.cpp  hungarian.h  log.h  macro_clustering.cpp  macro_clustering.h  mapped_file.cpp  mapped_file.h  mappedmesh.cpp  mappedmesh.h  material.cpp  material.h  mesh.cpp  mesh.h  mesh_hierarchy.cpp  mesh_hierarchy.h  mesh_types.h  micro_clustering.cpp  micro_clustering.h  micro_clustering_metis.cpp  micro_clustering_metis.h  nodemesh.h  spatial_sort.cpp  spatial_sort.h  vcgmesh.cpp  vcgmesh.h
src/loaders/: meshloader.cpp  meshloader.h  objexporter.cpp  objexporter.h  objloader.cpp  objloader.h  plyexporter.cpp  plyexporter.h  plyloader.cpp  plyloader.h
src/nxsbuild/: CMakeLists.txt  b3dm.cpp  b3dm.h  build_parameters.cpp  build_parameters.h  buildmaterial.cpp  buildmaterial.h  colormap.cpp  colormap.h  export_nxs.cpp  export_nxs.h  gltf.cpp  gltfbuilder.cpp  gltfbuilder.h  gltfloader.cpp  gltfloader.h  kdtree.cpp  kdtree.h  main.cpp  merge_simplify_split.cpp  merge_simplify_split.h  mesh.cpp  mesh.h  meshloader.cpp  meshloader.h  meshstream.cpp  meshstream.h  nexusbuilder.cpp  nexusbuilder.h  nodetexcreator.cpp  nodetexcreator.h  nxsbuild.pro  objloader.cpp  objloader.h  partition.h  plyloader.cpp  plyloader.h  stlloader.cpp  stlloader.h  texpyramid.cpp  (+13 more)
src/nxsedit/: CMakeLists.txt  extractor.cpp  extractor.h  main.cpp  main_compress.cpp  nxscompress.pro  nxsedit.pro
src/nxsview/: CMakeLists.txt  gl_nxsview.cpp  gl_nxsview.h  glew.cmake  main.cpp  nxsview.pro  nxsview.ui  scene.cpp  scene.h  ui_nxsview.h
src/nxszip/: abitstream.cpp  atunstall.cpp  bitstream.cpp  bitstream.h  bytestream.h  cstream.h  fpu_precision.h  main.cpp  math_class.h  mesh.cpp  meshcoder.cpp  meshcoder.h  meshdecoder.cpp  meshdecoder.h  model.h  nxszip.pro  range.h  tunstall.cpp  tunstall.h  vcg_mesh.h  zpoint.h
src/texture/: jpeg_decoder.cpp  jpeg_decoder.h  parametrization.cpp  parametrization.h  pyramid.cpp  pyramid.h  rasterizer.cpp  rasterizer.h  texture.cpp  texture.h  texture_cache.cpp  texture_cache.h
webpack/: Nexus3D.js  README.md  package.json  rollup.config.js  webpack.config.js  webpacklib.config.js
webpack/src/: Cache.js  Mesh.js  NXS.js  NXSRaw.js  Nexus3D.js  PriorityQueue.js  binary.js  cache.js  index.js  mesh.js  monitor.js  priorityqueue.js  traversal.js
x3dom/: readme.md
x3dom/html/: glb.html  index.html  inline-gltf.html  inline.html  x3dom-full.js
x3dom/nxs2glb/: main.cpp  nxs2glb.pro
x3dom/nxs2gltf/: gltf.h  main.cpp  nxs2gltf.pro  tiny_gltf.h
